test/typecheck/good/expr.ks
int main()
{
    int a = 4 + 6;
    int b = a * 3;
    bool c = a < 10;
    bool d = c && false;
    return b - a;
}