test/typecheck/bad/incompatible_ret_type.ks
bool main()
{
    bool val = true;
    return 1;
}
